--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <!--camel.version>3.11.4</camel.version-->
-        <camel.version>3.12.0</camel.version>
+        <camel.version>3.11.7</camel.version>
+        <!--<camel.version>3.12.0</camel.version>-->
+        <!--<camel.version>3.17.0</camel.version>-->
 
         <commons-io.version>2.11.0</commons-io.version>
         <commons-csv.version>1.9.0</commons-csv.version>
